# Toodo

./: .gitignore  DEVELOPER.md  README.md  README_DESKTOP_USER.txt  SIGNING.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-portable.mjs  package-desktop.mjs  package-portable.mjs  sign-windows.ps1
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: EditableCell.tsx  GanttBar.tsx  GanttProjectExclusionLayer.tsx  GanttTaskMemoLayer.tsx  GanttTaskMemoMarker.tsx  GanttTaskMemoPopover.tsx  GanttTimeline.tsx  GanttView.tsx  MainTable.tsx  PriorityBadge.tsx  ProjectExclusionModal.tsx  StatusBadge.tsx  SupabaseAuthPanel.tsx  TaskRow.tsx  TopNav.tsx  UserProfileMenu.tsx  WorkspaceControls.tsx
src/components/ui/: ThemeSwitcher.tsx
src/data/: sampleTasks.ts
src/hooks/: useTheme.ts
src/storage/: appStorage.ts  desktopFileStorage.ts  indexedDbStorage.ts  localStorageFallback.ts  supabaseStorage.ts  types.ts
src/store/: memoStore.ts  taskStore.ts  workspaceStore.ts
src/styles/: global.css  themes.css  tokens.css
src/supabase/: client.ts  useSupabaseAuth.ts
src/utils/: clipboard.ts  date.ts  dateInput.ts  projectExclusions.ts  taskTree.ts  theme.ts
supabase/: README.md  toodo_schema.sql
